--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <!-- Polyfill(s) for older browsers -->
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/toastr/build/toastr.min.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
